2nd completion of tutorial

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,10 +8,12 @@ spring.datasource.password=${dbpass}
 spring.sql.init.mode=never
 
 spring.jpa.hibernate.ddl-auto=none
+#CAN USE spring.jpa.hibernate.ddl-auto=validate IN PROD 
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
+#IN PROD spring.thymeleaf.cache=true
 version=${version}
-app.version=${app.version}
+#app.version=${app.version}
