--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,22 +3,12 @@ spring.datasource.username=postgres
 spring.datasource.password=password321
 
 spring.sql.init.mode=never
-
 spring.jpa.hibernate.ddl-auto=none
-
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
-
-app.version=dev
 version=dev
-
-#spring.h2.console.enabled=false
-#spring.h2.console.path=/h2-console
-#spring.jpa.show-sql=true
-#spring.thymeleaf.cache=false
-#spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL;DB_CLOSE_DELAY=-1
 
 logging.level.root = WARN
 #logging.level.root = DEBUG
@@ -29,4 +19,5 @@ logging.file=app.log
 
 server.error.whitelabel.enabled=false
 
+#Turn off hibernate validation
 spring.jpa.properties.javax.persistence.validation.mode=none
