--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -2,7 +2,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
-app.version=3.3.3
-spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL;DB_CLOSE_DELAY=-1
-#version=3.3.3
-version=2.2.2
+version=3.3.2
+#jdbc.url=jdbc:h2:mem:testdb;MODE=PostgreSQL;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.jpa.properties.javax.persistence.validation.mode=none
