--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.profiles.active=dev
+
+# REQUIRED FOR h2-console 
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#spring.jpa.show-sql=true
+#spring.thymeleaf.cache=false
+#version=3.3.3
+#spring.datasource.url=jdbc:h2:mem:testdb
+##jdbc.url=jdbc:h2:mem:test;MODE=PostgreSQL;DB_CLOSE_DELAY=-1
